some work on reading guide 6

--- a/lecture/2.tex
+++ b/lecture/2.tex
@@ -1,5 +1,6 @@
 % \counterwithout{section}{chapter}
 
+\vspace{3mm}
 \noindent \textbf{Lecture 2 --- January 23\rd}
 
 \section{The Structuring of Protest}
