--- a/main.tex
+++ b/main.tex
@@ -123,6 +123,8 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \input{lecture/2}
 \input{lecture/3}
 \input{lecture/4}
+\input{lecture/5}
+\input{lecture/6}
 
 % \chapter{The Power of Disruption: The Movement of the Unemployed}
 
