--- a/reading/rg2-11.tex
+++ b/reading/rg2-11.tex
@@ -19,15 +19,21 @@
     \item How does McAdam challenge the view of the role of the \textbf{federal government} in ``traditional liberal accounts'' of the Civil Rights Movement? (pp. 169-170)
     
     \answer 
+    The traditional liberal accounts present the federal government as an ally working hard to bring the ideals of the movement to reality.
+    McAdam argues that, in fact, that the government tried to remain mostly neutral during this time, as both groups (white supremacists and black people) had significant voting power.
+    Instead, the government mostly tried to contain and avoid any excessive disruptions from either side, and was mostly preoccupied with maintaining the public order.
+    
     
     \item How does McAdam present the underlying strategy of the Civil Rights Movement? (p. 174)
     
     \answer 
+    The strategy employed was, as usual, to disrupt the public order.
+    More specifically, however, the strategy that the Civil Rights Movement employed was to deliberately provoke the white supremacists to disrupt the public order \textit{for them}.
+    Brilliant stuff!
     
     
     \item According to McAdam, why are \textbf{disruptive tactics} crucial for social movements?
    
-
     \answer
     
     \item What is \textbf{tactical interaction}?
