--- a/reading/rg2-4.tex
+++ b/reading/rg2-4.tex
@@ -19,18 +19,38 @@
     \item What is Piven \& Cloward's \textbf{critique} of \textbf{formal mass membership organizations}? (pp. xx-xxiii)
     
     \answer 
+    They point out several criticisms of formal mass membership organizations in the context of social movements. 
+    I would say that their main point of contention with the organizations is that their goal is much more aligned with \textit{organizing} the poor than it is to \textit{disrupt} social order.
+    
+    They also point to specific flaws that these organizations suffer from.
+    The most notable ones to me were the fact that these movements eventually need funding so they turn to elites for help (which kind of contradicts the whole point of their existence) and the fact that they often attempt too much, and fail to make any real change.
+    I think they describe this phenomenon as: ``in attempting to do what they cannot, they fail to do what they can.''
+
+    Another observation that they make is that formal mass membership organizations often fail to get concessions because elites are interested in nurturing long-term opposition.
     
     \item How does Piven \& Cloward's account of the Movement of the Unemployed illustrate their warning about the danger of \textbf{formal mass membership organizations}?
     
     \answer 
-    
+    We can see in their account that the formalization of the Movement of the Unemployed brought about the decrease in effectiveness of the overall movement.
+    For a long time, the main bargaining tool that the Movement of the Unemployed had was their ability to disrupt the social order.
+    However, as the institutions like the WAA and the WAG (fix) started to arise and establish more civil channels of communication, the disruption caused by the unemployed began to decrease.
+    This eventually led to local relief agencies being able to devise plans to deal with these institutions, which were far easier to deal with than, say, an angry mob willing to break things until they got their relief.
     
     \item How do Piven \& Cloward explain the \textbf{decline} of the movement?
-   
 
     \answer
+    It was gradual, and brought about mostly by the formalization of the institutions, as well as some policies by Roosevelt's administration which made it seem like the poor and unemployed had already gotten enough aid, and that relief was not a viable option.
     
     \item According to Ciccarello-Maher, what is the ``\textbf{real lesson from Baltimore}''?
+
+    \answer
+    In short, the real lesson from Baltimore is that \textit{riots work}.
+    Authorities do very little in the face of nonviolent protest; in fact, they may do nothing at all and just ignore the protestors.
+    However, when people riot, disrupt the social order, and otherwise become a real, tangible problem for authorities, the authorities begin to respond, and to possibly make concessions.
+    \begin{center}
+        \textit{The threat posed by the people in the streets is their best ammunition when begging for crumbs from the system.}
+    \end{center}
+    
     
 \end{enumerate}
  
