--- a/reading/rg2-6.tex
+++ b/reading/rg2-6.tex
@@ -16,36 +16,66 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item What are the \textbf{3 factors} that facilitate the \textbf{emergence} of social movments (or the ``generation of insurgency'')? (pp. 40-44; 48; 49-51)
+    \item What are the \textbf{3 factors} that facilitate the \textbf{emergence} of social movements (or the ``generation of insurgency'')? (pp. 40-44; 48; 49-51)
     
     \answer 
+    \begin{enumerate}
+        \item 
+    \end{enumerate}
     
     \item How does McAdam conceptualize the ``\textbf{structure of political opportunities}''? (pp. 40-43)
     
     \answer 
-    
+    They are
+    \begin{enumerate}
+        \item 
+        The level of organization within the aggrieved population.
+        \item 
+        The collective assessment of the prospects for successful insurgency within that same population.
+        \item 
+        The political alignment of groups within the larger political environment.
+    \end{enumerate}
     
     \item What is the significance of \textbf{cognitive liberation} for the emergence of movements? (pp. 48-51) 
    
-
     \answer
-    
+    This is basically a rehash of the importance of the transformation of consciousness that Piven \& Cloward talk about.
+    It is important that the aggrieved group takes the different cues into account and evolves a mutually acceptable form of response.
+    The more interesting point (to me, at least) that McAdam makes is that the process of cognitive liberation is more likely and has more weight whenever there is a strong sense of social integration within the affected community.
+     
     \item What factors determine the \textbf{development}/\textbf{decline} of movements? (pp. 51-57)
     
     \answer 
-    
+    These are necessary but not sufficient conditions for a social movement.
+    \begin{enumerate}
+        \item Cognitive liberation.
+        \item Shifting political conditions.
+        \item Indigenous organizational strength.
+    \end{enumerate}
+    Losing bargaining power with respect to the other actors by losing in any of these three fronts often contributes to the decline of a social movement.
     \item According to McAdam, what are the \textbf{3 potential dangers} of \textbf{formal organizations}?
     
     \answer
+    \begin{enumerate}
+        \item Oligarchization.
+        \item Co-optation.
+        \item Dissolution of indigenous support.
+    \end{enumerate}
     
 
     \item How does the \textbf{organizational structure} of the Civil Rights Movement change by the early 1960s? (pp. 146-147)
     
     \answer
+    It became more formalized, but it still retained the support and some of the structure from its early days.
+    Notably, Black college students and church members were still actively involved with the movement, even though they were not the ones that initiated most of the actions themselves.
     
     \item How does McAdam present the relationship between \textbf{indigenous and formal organizations} within the movement? (pp. 149-151)
     
     \answer
+    I think she sums it up nicely in her final paragraph:
+    \begin{center}
+    \textit{By mobilizing the external support of elite groups and co-opting the indigenous resources of the southern black community, these formal organizations managed to establish a broad base of support that facilitated the rapid expansion of their options and the generation of the high levels of activity characteristic of the early 1960s (p. 151)}        
+    \end{center}
     
 \end{enumerate}
  
