Add reading guide 6

--- a/reading/rg2-11.tex
+++ b/reading/rg2-11.tex
@@ -35,44 +35,96 @@
     \item According to McAdam, why are \textbf{disruptive tactics} crucial for social movements?
    
     \answer
+    Disruptive tactics are crucial for social movements because they are an effective means of obtaining concessions from the group in power.
+    The excluded and marginalized groups that often initiate social movements are always initially in a state of political impotence, at least through formal and institutionalized means like electoral politics.
+    Disruptive tactics are a way to bypass these institutionalized channels and to gain some power through unconventional means.
+    More specifically, these tactics operate by impeding the opposition from operating normally or otherwise attaining their goals.
+    If the insurgents become bothersome enough, their opposition may hand out concessions in order to make the disruption stop.
+
     
     \item What is \textbf{tactical interaction}?
     
     \answer 
+    To define tactical interaction, it is important to first define tactical innovation and tactical adaptation.
+    \begin{enumerate}
+        \item \textbf{Tactical innovation:}
+        This is a term that refers to the creativity of insurgents to come up with new tactics of disruption.
+        \item \textbf{Tactical adaptation:}
+        This is a term that refers to the ability of the opposition to counter or otherwise diminish the disruption caused by the tactics of insurgents.
+    \end{enumerate}
+    With these terms defined, we can think of \textbf{tactical interaction} as a process of interleaved tactical innovation and tactical adaptation.
+    It is the dynamic of insurgents coming up with new ideas to disrupt the social order and the responses of the opposition to mitigate the damage caused by those tactics.
     
     \item What \textbf{3 factors} created a structure of \textbf{political opportunity} for the movement? (p. 737)
     
     \answer
+    The three factors that McAdam mentions are the following:
+    \begin{enumerate}
+        \item The growing electoral importance of black people.
+        \item The collapse of the southern cotton economy.
+        \item The increased salience of third world countries in US foreign policy.
+    \end{enumerate}
     
 
     \item What \textbf{indigenous organizations} were crucial for the movement?
     
     \answer
+    McAdam says that there were three institutions in particular that the movement heavily relied on:
+    \begin{enumerate}
+        \item The black church.
+        \item Black colleges.
+        \item The southern wing of the NAACP.
+    \end{enumerate}
     
     \item According to McAdam's research, what is the relationship between \textbf{tactical innovation} and the \textbf{pace of insurgency}?
     
     \answer
+    The relationship is that the introduction and spread of new techniques (i.e. tactical innovation) would often lead to increases in movement activities.
+    In fact, peaks in movement activity (measured by the number of movement-initiated actions in Figures 1 and 2), can be clearly related to some new tactic being adopted by the insurgents.
+    Similarly, troughs in movement activity usually correspond to successful efforts by the opponents of the movement to counter the new tactics (i.e. tactical adaptation).
 
     \item McAdam presents the tactical innovation characterizing the movement between 1955-1970. 
     What are all the \textbf{tactics} he discusses?
     
     \answer
+    The tactics he discusses are:
+    \begin{enumerate}
+        \item \textbf{Bus boycotts:} This tactic consists of avoiding the use of buses, with the intention of damaging the revenue of the service, until buses were desegregated.
+        This tactic was especially powerful because black people comprised a large percentage of bus riders.
+        \item \textbf{Sit-ins:}
+        This tactic simply consists in large groups of people refusing to leave some location until demands are met.
+        Unlike bus boycotts, where the majority of the burden fell upon the boycotters (as they were the ones who had to find other ways to get to where they needed to go), sit-ins put most of the burden on the establishments where the insurgents decided to protest.
+        It was a very accessible tactic, from that point of view.
+        \item \textbf{Freedom rides:}
+        This tactic is mentioned in the text, but is not in scope for this reading response.
+    \end{enumerate}
 
     \item What forms of \textbf{tactical adaptation} develop in response to the \textbf{bus boycotts}?
 
     \answer
+    There were two main forms of tactical adaptation to the bus boycotts:
+    \begin{enumerate}
+        \item \textbf{Legal obstruction:}
+        As the name implies, this form of adaptation was a way to neutralize the effectiveness of the bus boycotts.
+        These obstructions included public subsidies to the bus systems, police campaigns for detaining carpool drivers, arresting the executive committee of the ICC (the organization coordinating the boycott), and assigning bus seats based on ``maximum safety'' (which unsurprisingly resulted in segregation). 
+        
+        \item \textbf{Extra-legal harassment:}
+        This form of adaptation consisted of intimidating members of the black community via physical and economic means.
+        These included but were not limited to the beating and shooting of innocent black people, as well as bombings of black churches.
+    \end{enumerate}
 
-
-    \item What forms of \textbf{tactical adaptation} develop in repsonse to the \textbf{sit-ins}?
+    \item What forms of \textbf{tactical adaptation} develop in response to the \textbf{sit-ins}?
 
     \answer
-
+    There were several forms of tactical adaptation that developed in response to the sit-ins.
+    At first, they were disorganized and varied day to day. 
+    However, over time, the opposition developed responses to the sit-in tactic that were consistently effective.
+    These responses included mass arrests by the police, the passage of state or local anti-trespassing ordinances, the permanent closure of lunch counters, and the establishment of various biracial negotiating bodies to contain or routinize the conflict.
+    According to McAdam, the last one was especially effective because it undermined the disruption caused by the sit-in tactic itself, as it made the sit-ins feel like a more common and established phenomenon.
 
     
 \end{enumerate}
  
-
-
 
 
 \end{document}
