--- a/main.tex
+++ b/main.tex
@@ -125,6 +125,7 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \input{lecture/4}
 \input{lecture/5}
 \input{lecture/6}
+\input{lecture/7}
 
 % \chapter{The Power of Disruption: The Movement of the Unemployed}
 
