--- a/main.tex
+++ b/main.tex
@@ -126,6 +126,7 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \input{lecture/5}
 \input{lecture/6}
 \input{lecture/7}
+\input{lecture/8}
 
 % \chapter{The Power of Disruption: The Movement of the Unemployed}
 
