--- a/lecture/4.tex
+++ b/lecture/4.tex
@@ -1,6 +1,8 @@
 \vspace{3mm}
 \noindent \textbf{Lecture 4 --- January 30\th}
 
+\setcounter{section}{0}
+
 \subsubsection{On Striking}
 A strike is a tactic where people withhold labor.
 Typically, strikes happen at the level of one company.
