--- a/lecture/5.tex
+++ b/lecture/5.tex
@@ -1,5 +1,30 @@
+
 \vspace{3mm}
-\noindent \textbf{Lecture 5 --- February 4\th}
+\noindent \textbf{Lecture 5 --- February 6\th}
 
 Class was sadly canceled due to the passing of Professor Michael Burawoy.
 
+\vspace{3mm}
+\noindent \textbf{Lecture 6 --- February 4\th}
+
+\section{The Real Lesson from Baltimore}
+This reading makes the overarching claim that ``riots work.''
+It focuses on instances of police brutality, namely the killings of Freddie Gray, Michael Brown, and Oscar Grant.
+
+\begin{center}
+    \textit{Every concession is at the same time a containment strategy.}
+\end{center}
+
+\subsection{Organization}
+There were Unemployed Councils in virtually every city, which were small, local organizations that would incite people to protest.
+
+Later, there was the rise of the Workers Alliance of America, which Piven \& Cloward describe as a ``mass membership organization.''
+There was a prevalent belief that there was a need to create these sorts of organizations, as they would enable the coordination of members, resources, and such that they could create a large voting block.
+It is a belief that this kind of mass
+
+Piven \& Cloward argue that these mass membership organizations were built off the success of disruption, and their very existence would undermine that same power of disruption.
+One way this would happen was because the leadership of these organizations would get distracted by institutional politics, and focus more on building up the organization building than in attaining the goals of the movement.
+
+Dangers of concessions:
+Co-optation, fragmentation of the movement, and more.
+Furthermore, the concessions were by no means equally distributed once they were received.
