--- a/main.tex
+++ b/main.tex
@@ -122,21 +122,24 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \input{lecture/1}
 \input{lecture/2}
 \input{lecture/3}
+
+\chapter{The Power of Disruption: The Movement of the Unemployed}
 \input{lecture/4}
 \input{lecture/5}
+
+
+\newpage
+\chapter{Strategic \& Tactical Dynamics: The Civil Rights Movement}
 \input{lecture/6}
 \input{lecture/7}
 \input{lecture/8}
 
-% \chapter{The Power of Disruption: The Movement of the Unemployed}
+\chapter{Unintended Impacts: Countermovements \& Electoral Reverberations}
+\input{lecture/9}
+\input{lecture/10}
 
-
-% \newpage
-% \chapter{Strategic \& Tactical Dynamics: The Civil Rights Movement}
-
-% \chapter{Unintended Impacts: Countermovements \& Electoral Reverberations}
-
-% \chapter{``Free Speech'': UC Berkeley from the FSM to the Palestine Solidarity Movement}
+\chapter{``Free Speech'': UC Berkeley from the FSM to the Palestine Solidarity Movement}
+\input{lecture/11}
 
 % \chapter{``Black Power'' and its Progenies: The Black Panther Party \& the New Left}
 
